# elcaju

./: .gitignore  LICENSE  README.md  l10n.yaml  pubspec.yaml
.github/workflows/: release.yml
android/app/: build.gradle
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/constants/: colors.dart
lib/core/models/: proof.dart
lib/core/services/: lnurl_service.dart  nfc_service.dart  price_service.dart  proof_service.dart
lib/core/utils/: bip321_builder.dart  formatters.dart  incoming_data_parser.dart  keyset_debug.dart  nostr_utils.dart  p2pk_utils.dart  peanut_codec.dart
lib/data/: pending_send.dart  pending_send_storage.dart  pending_token.dart  pending_token_storage.dart  transaction_meta_storage.dart
lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_it.dart  app_localizations_ja.dart  app_localizations_ko.dart  app_localizations_pt.dart  app_localizations_ru.dart  app_localizations_sw.dart  app_localizations_zh.dart  app_pt.arb  app_ru.arb  app_sw.arb  app_zh.arb
lib/providers/: p2pk_provider.dart  price_provider.dart  settings_provider.dart  wallet_provider.dart
lib/src/rust/api/: error.dart  (+6 more)
linux/: CMakeLists.txt
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: error.rs  keys.rs  mint_info.rs  mod.rs  payment_request.rs  token.rs  wallet.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle
rust_builder/cargokit/: build_pod.sh
rust_builder/ios/: elcaju_core.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: elcaju_core.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
(+44 files in other folders)
